Add Google site verification meta tag
Added Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="_HqLHhlLmB1WafuiBUrTti9Jao_JyGR4xWjLvJXlZ7U" />
     <title>ARK Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
